2010-12-13  Mike Lawther  <mikelawther@chromium.org>

Reviewed by Daniel Bates.

        [skia] ignore transform for canvas shadows
        https://bugs.webkit.org/show_bug.cgi?id=50437

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::setPlatformShadow):

Canonical link: https://commits.webkit.org/64350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74001 268f45cc-cd09-0410-ab3c-d52691b4dbfc